Convert px to rem and fix the weird mobile wrapping on h1

--- a/main.css
+++ b/main.css
@@ -5,19 +5,19 @@ body {
 
 html * {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 1rem;
   list-style: none;
-  margin: 8px;
-  line-height: 14px;
+  margin: 0.5rem;
+  line-height: 1.5;
 }
 
 h1 {
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: normal;
 }
 
 body {
-  margin: 14px;
+  margin: 1rem;
 }
 
 ul {
@@ -32,7 +32,7 @@ a {
 
 /* Set up the paragraph text */
 p {
-  font-size: 16px; /* Set the font size */
+  font-size: 1rem; /* Set the font size */
   line-height: 1.5; /* Set the line height */
 }
 
@@ -57,14 +57,15 @@ header {
 }
 
 .header-title {
-  padding: 20px;
-  font-size: 32px;
+  padding: 1.25rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
   font-weight: bold;
 }
 
 .header-pic {
-  max-width: 150px;
+  max-width: 9.375rem;
   max-height: 100%;
   border-radius: 50%;
-  border: 2px solid #cccccc;
+  border: 0.125rem solid #cccccc;
 }
